kubernetes/posgress-database-deploy-and-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posgress-database-deployment
  namespace: web-temps-reel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posgress-database
  template:
    metadata:
      labels:
        app: posgress-database
    spec:
      containers:
        - name: posgress-database
          image: postgres:15.4-alpine
          ports:
          - containerPort: 5432
          volumeMounts:
          - name: posgress-database-data
            mountPath: /var/lib/postgresql/data
      volumes:
      - name: posgress-database-data
        hostPath:
          path: /home/ubuntu/app/pg-data-web-temps-reel

---

apiVersion: v1
kind: Service
metadata:
  name: posgress-database-service
  namespace: web-temps-reel
spec:
  selector:
    app: posgress-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
