kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: web-temps-reel
spec:
  tls:
  - hosts:
    - quiz.bliblablou.day
    secretName: quiz-bliblablou-tls
  rules:
  - host: quiz.bliblablou.day
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8180
